fixing deleteAllPatterns api
